fix: comprehensive code audit - resource leaks, thread safety, NPE, raw types, i18n logs (2.7.3)
  - Fix resource leaks: ZipFile/FileInputStream with try-with-resources, add Zip Slip protection
  - Fix thread safety: HashMap→ConcurrentHashMap, volatile for cross-thread visibility, DCL lazy init
  - Fix NPE risks: null-safe metadata access in load balancer, listFiles() null check
  - Fix interrupt handling: restore interrupt status in BLock.tryLock()
  - Fix raw types: RedisTemplate<String, ?> for flexible injection, TypeReference for Jackson
  - Fix empty catch blocks: try-with-resources or documented ignored exceptions
  - Fix deprecated API: newInstance() → getDeclaredConstructor().newInstance()
  - Improve readability: simplify self-assignment expression in ServiceInstanceWeightSupport
  - Standardize logs: convert 13 Chinese log messages to English across all modules